--- a/Python/module1/Helloworld.ipynb
+++ b/Python/module1/Helloworld.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "4419c5dc-7fa5-4fd0-b725-b6b31d58f7b7",
    "metadata": {},
    "outputs": [
@@ -85,14 +85,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, Python!\n"
+      "Hello, Python!\n",
+      "Hello\n",
+      "Python is \"awesome\"\n"
      ]
     }
    ],
    "source": [
     "# Try your first Python output\n",
     "\n",
-    "print('Hello, Python!')"
+    "print('Hello, Python!')\n",
+    "text=\"Hellog World\"\n",
+    "print(text[0:5])\n",
+    "print(\"Python is \\\"awesome\\\"\")"
    ]
   },
   {
